build/turtle-parser.output
Terminaux inutilisés dans la grammaire

   "name"


Grammaire

    0 $accept: unit $end

    1 unit: cmds

    2 cmds: cmd cmds
    3     | %empty

    4 cmd: "forward" expr
    5    | "quit"

    6 expr: "value"


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
"value" (258) 6
"name" (259)
"quit" (260) 5
"forward" (261) 4


Non-terminaux, suivis des règles où ils apparaissent

$accept (7)
    à gauche: 0
unit (8)
    à gauche: 1, à droite: 0
cmds (9)
    à gauche: 2 3, à droite: 1 2
cmd (10)
    à gauche: 4 5, à droite: 2
expr (11)
    à gauche: 6, à droite: 4


État 0

    0 $accept: . unit $end

    "quit"     décalage et aller à l'état 1
    "forward"  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 3 (cmds)

    unit  aller à l'état 3
    cmds  aller à l'état 4
    cmd   aller à l'état 5


État 1

    5 cmd: "quit" .

    $défaut  réduction par utilisation de la règle 5 (cmd)


État 2

    4 cmd: "forward" . expr

    "value"  décalage et aller à l'état 6

    expr  aller à l'état 7


État 3

    0 $accept: unit . $end

    $end  décalage et aller à l'état 8


État 4

    1 unit: cmds .

    $défaut  réduction par utilisation de la règle 1 (unit)


État 5

    2 cmds: cmd . cmds

    "quit"     décalage et aller à l'état 1
    "forward"  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 3 (cmds)

    cmds  aller à l'état 9
    cmd   aller à l'état 5


État 6

    6 expr: "value" .

    $défaut  réduction par utilisation de la règle 6 (expr)


État 7

    4 cmd: "forward" expr .

    $défaut  réduction par utilisation de la règle 4 (cmd)


État 8

    0 $accept: unit $end .

    $défaut  accepter


État 9

    2 cmds: cmd cmds .

    $défaut  réduction par utilisation de la règle 2 (cmds)
